@@ -1079,7 +1079,6 @@ EOF
     OP_END = 0
     OP_CREATE_DIRECTORY = 1
     OP_CREATE_FILE = 2
-    OP_CREATE_PROCESS = 3
     OP_SETENV = 5
     OP_POST_CREATE_PROCESS = 6
 
@@ -1241,19 +1240,6 @@ EOF
       write_string(tgt.to_native)
       write_size(src.size)
       IO.copy_stream(src, @of)
-    end
-
-    # Execute the specified application script during stub's data stream reading and
-    # wait for it to finish. The return value from the executed script is ignored. If
-    # the script execution succeeds, the stub continues processing the remaining
-    # data stream. If the script execution fails, the stub outputs an error and exits.
-    # This method overwrites information about the script to be launched after file
-    # extraction provided by the `post_create_process` method.
-    def create_process(image, cmdline)
-      Ocran.verbose_msg "l #{show_path image} #{show_path cmdline}"
-      write_opcode(OP_CREATE_PROCESS)
-      write_string(image.to_native)
-      write_string(cmdline)
     end
 
     # Specifies the final application script to be launched, which can be called
