@@ -1,5 +1,6 @@
 === 1.3.16
 - At startup, OCRAN no longer automatically removes directories that were previously deployed but couldn't be deleted. This change has been made to enhance security by preventing processes other than the startup process from manipulating temporary files created by them.
+- The ability for the stub to launch any script during the unpacking of application files has been removed. This feature was not in use.
 
 === 1.3.15
 - Support for Ruby 2.6 and above.
